# nano-autograd

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
examples/: README.md  README_zh.md  compare_pytorch.py  export_onnx_example.py  train_and_export_onnx.py  train_mlp.py  train_xor.py
examples/utils/: Read_MNIST_Tool.py
src/nanograd/: __init__.py  engine.py  export_onnx.py  ops.py  tensor.py
src/nanograd/nn/: __init__.py  activation.py  linear.py  module.py
src/nanograd/optim/: __init__.py  adam.py  optimizer.py  sgd.py
tests/: test_engine.py  test_nn.py  test_onnx_export.py  test_optim.py  test_tensor.py  verify_torch.py
