[project]
name = "nano-autograd"
version = "0.1.0"
description = "A lightweight automatic differentiation framework from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "torch>=2.2.0",  # 用于基准测试和正确性验证 (CPU版即可)
    "ruff>=0.3.0",   # 极速 Linter 和 Formatter
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_autograd"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"