[project]
name = "nano-autograd"
version = "0.1.0"
description = "A lightweight automatic differentiation framework from scratch. Built with uv for fast dependency management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nanograd Contributors"}
]
keywords = ["deep-learning", "autograd", "automatic-differentiation", "neural-networks", "machine-learning", "education", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "onnx>=1.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "torch>=2.2.0",  # 用于基准测试和正确性验证 (CPU版即可)
    "ruff>=0.3.0",   # 极速 Linter 和 Formatter
]
onnx = [
    "onnx>=1.15.0",  # ONNX 模型导出
    "onnxruntime>=1.16.0",  # ONNX 模型推理（可选）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanograd"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
